# sk-client-android

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
app/: build.gradle  version
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_multi_camera_dialog.xml  bg_multi_camera_item.xml  fg_preview_border.xml
app/src/main/res/layout/: fragment_demo.xml  layout_tip_view.xml
app/src/main/res/layout-land/: fragment_demo.xml
app/src/main/res/values/: colors.xml  strings.xml  (+1 more)
app/src/main/res/values-v31/: themes.xml
libausbc/: build.gradle
libnative/: build.gradle
libnative/src/main/cpp/: CMakeLists.txt  nativelib.cpp
libnative/src/main/cpp/module/mp3/: mp3.cpp  mp3.h
libnative/src/main/cpp/module/mp3/lame/: VbrTag.c  VbrTag.h  bitstream.c  bitstream.h  encoder.c  encoder.h  fft.c  fft.h  gain_analysis.c  gain_analysis.h  id3tag.c  id3tag.h  l3side.h  lame-analysis.h  lame.c  lame.h  lame_global_flags.h  lameerror.h  machine.h  mpglib_interface.c  newmdct.c  newmdct.h  presets.c  psymodel.c  psymodel.h  quantize.c  quantize.h  quantize_pvt.c  quantize_pvt.h  reservoir.c  reservoir.h  set_get.c  set_get.h  tables.c  tables.h  takehiro.c  util.c  util.h  vbrquantize.c  vbrquantize.h  (+2 more)
libnative/src/main/cpp/module/yuv/: yuv.cpp  yuv.h
libnative/src/main/cpp/proxy/: proxy_mp3.cpp  proxy_mp3.h  proxy_yuv.cpp  proxy_yuv.h
libnative/src/main/cpp/utils/: logger.cpp  logger.h
libuvc/: build.gradle
libuvc/src/main/: AndroidManifest.xml
libuvc/src/main/jni/: Application.mk  localdefines.h  utilbase.h
(+451 files in other folders)
